--- a/package.json
+++ b/package.json
@@ -1,5 +1,22 @@
+
+
 {
-  "dependencies": {
-    "express": "^4.18.2"
+  "name": "webpack-demo",
+  "version": "1.0.0",
+  "description": "",
+ "private": true,
+  "scripts": {
+    "start": "node ./back/server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT",
+    "dependencies": {
+      "express": "^4.18.2",
+      "uuid": "^9.0.1"
+    },
+  "devDependencies": {
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2"
   }
 }
